apps/applications/media/nodecast-tv/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodecast-tv
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nodecast-tv
  template:
    metadata:
      labels:
        app: nodecast-tv
    spec:
      containers:
        - name: nodecast-tv
          image: ghcr.io/technomancer702/nodecast-tv
          ports:
            - name: web-ui
              containerPort: 3000
              protocol: TCP
          startupProbe:
            httpGet:
              path: /
              port: web-ui
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: web-ui
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: web-ui
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: config
              mountPath: /app/data
          resources:
            requests:
              gpu.intel.com/i915: "1"
            limits:
              gpu.intel.com/i915: "1"
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: nodecast-tv-config-pvc
