apps/applications/media/nodecast-tv/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nodecast-tv-policy
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app: nodecast-tv
  # ----=== Ingress ===----
  ingress:
    # === Allow access from Traefik ===
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "web-ui"
              protocol: "TCP"

  # ----=== Egress ===----
  egress:
    # === Allow DNS ===
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: coredns
      toPorts:
        - ports:
            - port: "53"
              protocol: "UDP"
            - port: "53"
              protocol: "TCP"
    # === Allow access to external ===
    - toEntities:
        - "world"
    # === Allow access to Traefik (for OIDC) ===
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "443"
              protocol: "TCP"
            - port: "80"
              protocol: "TCP"
